// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BinaryOperation 1`] = `
{
  "kind": "BinaryOperation",
  "left": {
    "kind": "NumberLiteral",
    "value": 3,
  },
  "operator": "+",
  "right": {
    "kind": "NumberLiteral",
    "value": 3,
  },
}
`;

exports[`BinaryOperation 2`] = `
{
  "kind": "BinaryOperation",
  "left": {
    "_meta": {
      "end": {
        "column": 6,
        "line": 1,
        "offset": 5,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "kind": "ValueIdentifier",
    "value": "hello",
  },
  "operator": "+",
  "right": {
    "kind": "NumberLiteral",
    "value": 3,
  },
}
`;
